feat(payments): support changing payment methods
